fix(errorprone): replace Class.newInstance() with getDeclaredConstructor().newInstance() (ClassNewInstance)
Class.newInstance() is deprecated since Java 9 and silently rethrows
checked exceptions thrown by the constructor as if they were unchecked.
Both call sites in ExtraFieldUtils now use the reflective constructor
form and translate InvocationTargetException / NoSuchMethodException
to the same RuntimeException / InstantiationException that callers
already handle.